fix options spacing in modal

--- a/app/scss/components/_modal.scss
+++ b/app/scss/components/_modal.scss
@@ -502,7 +502,7 @@
         
         .product-option.option-hboard {
             flex: 1 1 25%; /* explanation below */
-            margin-right: 0;
+            margin: .5rem;
         }
         
         .product-option.option-hboard label {
